fixed js for gallery

--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -9,7 +9,7 @@
     <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm4" src="/pictures/marvintro.jpg">
+            <img class="sm sm4" src="/pictures/marvintro.jpg">
           </div>
         </div>
       </div>
@@ -17,7 +17,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm5" src="/pictures/kimmy.jpg">
+            <img class="sm sm5" src="/pictures/kimmy.jpg">
           </div>
         </div>
       </div>
@@ -25,7 +25,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm6" src="/pictures/ThomMarv.jpg">
+            <img class="sm sm6" src="/pictures/ThomMarv.jpg">
           </div>
         </div>
       </div>
@@ -33,7 +33,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm2" src="/pictures/Petra1.jpg">
+            <img class="sm sm2" src="/pictures/Petra1.jpg">
           </div>
         </div>
       </div>
@@ -41,7 +41,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm7" src="/pictures/petra.jpg">
+            <img class="sm sm7" src="/pictures/petra.jpg">
           </div>
         </div>
       </div>
@@ -49,7 +49,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm8" src="/pictures/Mousebee_1.jpg">
+            <img class="sm sm8" src="/pictures/Mousebee_1.jpg">
           </div>
         </div>
       </div>
@@ -57,7 +57,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm9" src="/pictures/Mousebee_3.jpg">
+            <img class="sm sm9" src="/pictures/Mousebee_3.jpg">
           </div>
         </div>
       </div>
@@ -65,7 +65,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm17" src="/pictures/brookesm.jpg">
+            <img class="sm sm17" src="/pictures/brookesm.jpg">
           </div>
         </div>
       </div>
@@ -73,7 +73,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm18" src="/pictures/brooke2.jpg">
+            <img class="sm sm18" src="/pictures/brooke2.jpg">
           </div>
         </div>
       </div>
@@ -81,7 +81,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm12" src="/pictures/armcuff1.jpg">
+            <img class="sm sm12" src="/pictures/armcuff1.jpg">
           </div>
         </div>
       </div>
@@ -89,7 +89,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm14" src="/pictures/armcuff2.jpg">
+            <img class="sm sm14" src="/pictures/armcuff2.jpg">
           </div>
         </div>
       </div>
@@ -97,7 +97,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm19" src="/pictures/catwallet.jpg">
+            <img class="sm sm19" src="/pictures/catwallet.jpg">
           </div>
         </div>
       </div>
@@ -105,7 +105,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm22" src="/pictures/mollywallet.jpg">
+            <img class="sm sm22" src="/pictures/mollywallet.jpg">
           </div>
         </div>
       </div>
@@ -113,7 +113,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm24" src="/pictures/patwallet.jpg">
+            <img class="sm sm24" src="/pictures/patwallet.jpg">
           </div>
         </div>
       </div>
@@ -121,7 +121,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm21" src="/pictures/kindlecase.jpg">
+            <img class="sm sm21" src="/pictures/kindlecase.jpg">
           </div>
         </div>
       </div>
@@ -129,7 +129,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm23" src="/pictures/pateye.jpg">
+            <img class="sm sm23" src="/pictures/pateye.jpg">
           </div>
         </div>
       </div>
@@ -137,7 +137,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm10" src="/pictures/atoc.jpg">
+            <img class="sm sm10" src="/pictures/atoc.jpg">
           </div>
         </div>
       </div>
@@ -145,7 +145,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm3" src="/pictures/owl.jpg">
+            <img class="sm sm3" src="/pictures/owl.jpg">
           </div>
         </div>
       </div>
@@ -153,7 +153,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm13" src="/pictures/animalcell.jpg">
+            <img class="sm sm13" src="/pictures/animalcell.jpg">
           </div>
         </div>
       </div>
@@ -161,7 +161,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm11" src="/pictures/aoab.jpg">
+            <img class="sm sm11" src="/pictures/aoab.jpg">
           </div>
         </div>
       </div>
@@ -169,7 +169,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class="hex2">
-            <img class="sm1" src="/pictures/blue.jpg">
+            <img class="sm sm1" src="/pictures/blue.jpg">
           </div>
         </div>
       </div>
@@ -177,7 +177,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm15" src="/pictures/beeearrings1.jpg">
+            <img class="sm sm15" src="/pictures/beeearrings1.jpg">
           </div>
         </div>
       </div>
@@ -185,7 +185,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm16" src="/pictures/bbwass.jpg">
+            <img class="sm sm16" src="/pictures/bbwass.jpg">
           </div>
         </div>
       </div>
@@ -193,7 +193,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm20" src="/pictures/dna2.jpg">
+            <img class="sm20 sm" src="/pictures/dna2.jpg">
           </div>
         </div>
       </div>
@@ -201,7 +201,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm25" src="/pictures/caffeine-use.jpg">
+            <img class="sm25 sm" src="/pictures/caffeine-use.jpg">
           </div>
         </div>
       </div>
@@ -209,7 +209,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm26" src="/pictures/Carbon.jpg">
+            <img class="sm26 sm" src="/pictures/Carbon.jpg">
           </div>
         </div>
       </div>
@@ -217,7 +217,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm27" src="/pictures/carbonandwater.jpg">
+            <img class="sm sm27" src="/pictures/carbonandwater.jpg">
           </div>
         </div>
       </div>
@@ -225,7 +225,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm28" src="/pictures/chessset3.jpg">
+            <img class="sm sm28" src="/pictures/chessset3.jpg">
           </div>
         </div>
       </div>
@@ -233,7 +233,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm29" src="/pictures/chessset2.jpg">
+            <img class="sm sm29" src="/pictures/chessset2.jpg">
           </div>
         </div>
       </div>
@@ -241,7 +241,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm30" src="/pictures/CTWColette.jpg">
+            <img class="sm sm30" src="/pictures/CTWColette.jpg">
           </div>
         </div>
       </div>
@@ -249,7 +249,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm31" src="/pictures/CTWPharlain.jpg">
+            <img class="sm sm31" src="/pictures/CTWPharlain.jpg">
           </div>
         </div>
       </div>
@@ -257,7 +257,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm32" src="/pictures/DNAnecklace.jpg">
+            <img class="sm sm32" src="/pictures/DNAnecklace.jpg">
           </div>
         </div>
       </div>
@@ -265,7 +265,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm33" src="/pictures/EtOHgood.jpg">
+            <img class="sm sm33" src="/pictures/EtOHgood.jpg">
           </div>
         </div>
       </div>
@@ -275,112 +275,112 @@
 
     </div>
 
-    <div id="enlarge" class="clearfix">
+    <div id="enlarge" class=" clearfix">
 
       <img class="close" src="/assets/close.png">
 
       <span class="cap1 caption">
-      <img class="lg1" src= "/pictures/blue.jpg">'Organic' Beaded Necklace: Blue glass Seed Beads</span>
+      <img class="lg lg1" src= "/pictures/blue.jpg">'Organic' Beaded Necklace: Blue glass Seed Beads</span>
 
       <span class=" cap2 caption">
-      <img class="lg2" src="/pictures/Petra1.jpg">Petra, the MouseBee of Protection
+      <img class="lg lg2" src="/pictures/Petra1.jpg">Petra, the MouseBee of Protection
       </span>
 
       <span class=" cap3 caption">
-      <img class="lg3" src="/pictures/owl.jpg">Detail: The Owl, FEZ cosplay dress, PAX'12</span>
+      <img class="lg lg3" src="/pictures/owl.jpg">Detail: The Owl, FEZ cosplay dress, PAX'12</span>
 
       <span class=" cap4 caption">
-      <img class="lg4" src="/pictures/marvintro.jpg">
+      <img class="lg lg4" src="/pictures/marvintro.jpg">
       Introducing: Marv, The first Flying Sloth!</span>
 
       <span class=" cap5 caption">
-      <img class="lg5" src="/pictures/kimmy.jpg">Introducing: Kimmy, Big Sister to the Flying Sloth Family</span>
+      <img class="lg lg5" src="/pictures/kimmy.jpg">Introducing: Kimmy, Big Sister to the Flying Sloth Family</span>
 
       <span class=" cap6 caption">
-      <img class="lg6" src="/pictures/ThomMarv.jpg">Thomas and Marv are Friends</span>
+      <img class="lg lg6" src="/pictures/ThomMarv.jpg">Thomas and Marv are Friends</span>
 
-      <span class=" cap7 caption">
-      <img class="lg7" src="/pictures/petra.jpg">Petra, As All her Kind, is Drawn to Red Flowers Especially</span>
+      <span class="cap7 caption">
+      <img class="lg lg7" src="/pictures/petra.jpg">Petra, As All her Kind, is Drawn to Red Flowers Especially</span>
 
       <span class="cap8 caption">
-      <img class="lg8" src="/pictures/Mousebee_1.jpg">Introducing: Julianne! The Specialist
+      <img class="lg lg8" src="/pictures/Mousebee_1.jpg">Introducing: Julianne! The Specialist
       </span>
 
       <span class="cap9 caption">
-      <img class="lg9" src="/pictures/Mousebee_3.jpg">Julianne in her Element</span>
-
-      <span class=" cap10 caption">
-      <img class="lg10" src="/pictures/atoc.jpg">Adenine to Thymine friendship necklaces</span>
+      <img class="lg lg9" src="/pictures/Mousebee_3.jpg">Julianne in her Element</span>
 
       <span class="cap11 caption">
-      <img class="lg11" src="/pictures/aoab.jpg">Anatomy of a Beekeeper in Circular Galifreyan</span>
+      <img class="lg lg11" src="/pictures/aoab.jpg">Anatomy of a Beekeeper in Circular Galifreyan</span>
 
 
     <span class="cap12 caption">
-      <img class="lg12" src="/pictures/animalcell.jpg">acrylic painted Animal Cell, part of my Molecular Biology Jewelry Series</span>
+      <img class="lg lg12" src="/pictures/animalcell.jpg">acrylic painted Animal Cell, part of my Molecular Biology Jewelry Series</span>
 
       <span class="cap13 caption">
-      <img class="lg13" src="/pictures/armcuff1.jpg">A Tie-On Arm Cuff, for Keeping Cards Without a Wallet</span>
+      <img class="lg lg13" src="/pictures/armcuff1.jpg">A Tie-On Arm Cuff, for Keeping Cards Without a Wallet</span>
 
       <span class="cap14 caption">
-      <img class="lg14" src="/pictures/armcuff2.jpg">Angle 2 of Arm Cuff</span>
+      <img class="lg lg14" src="/pictures/armcuff2.jpg">Angle 2 of Arm Cuff</span>
 
       <span class="cap15 caption">
-      <img class="lg15" src="/pictures/beeearrings1.jpg">Beaded Bee Earrings</span>
+      <img class="lg lg15" src="/pictures/beeearrings1.jpg">Beaded Bee Earrings</span>
 
       <span class=" cap16 caption">
-      <img class="lg16" src="/pictures/bbwass.jpg">Featured on boingboing.net, We Are Star Stuff in Amino Acids</span>
+      <img class="lg lg16" src="/pictures/bbwass.jpg">Featured on boingboing.net, We Are Star Stuff in Amino Acids</span>
 
       <span class=" cap17 caption">
-      <img class="lg17" src="/pictures/brookelg.jpg">Arm cuff, knitted</span>
+      <img class="lg lg17" src="/pictures/brookelg.jpg">Arm cuff, knitted</span>
 
-      <span class=" cap18 caption">
-      <img class="lg18" src="/pictures/brooke2.jpg">Arm cuff, knitted</span>
+    <span class="cap18 caption">
+      <img class="lg lg18" src="/pictures/brooke2.jpg">Arm cuff, knitted</span>
 
-      <span class=" cap19 caption">
-      <img class="lg19" src="/pictures/catwallet.jpg">Painted Wallet, featuring my cats</span>
+    <span class="cap19 caption">
+      <img class="lg lg19" src="/pictures/catwallet.jpg">Painted Wallet, featuring my cats</span>
 
-      <span class=" cap20 caption">
-      <img class="lg20" src="/pictures/dna2.jpg">Wire wrapped necklace, DNA with Hydrogen bonds</span>
+      <span class="cap21 caption">
+      <img class="lg lg21" src="/pictures/kindlecase.jpg">Kindle Case Featuring Sloth Holmes and Watson</span>
 
-      <span class=" cap21 caption">
-      <img class="lg21" src="/pictures/kindlecase.jpg">Kindle Case Featuring Sloth Holmes and Watson</span>
+      <span class="cap22 caption">
+      <img class="lg lg22" src="/pictures/mollywallet.jpg">Painted Wallet, featuring Molly</span>
 
-      <span class=" cap22 caption">
-      <img class="lg22" src="/pictures/mollywallet.jpg">Painted Wallet, featuring Molly</span>
+      <span class="cap23 caption">
+      <img class="lg lg23" src="/pictures/pateye.jpg">My cat Patrick's eye</span>
 
-      <span class=" cap23 caption">
-      <img class="lg23" src="/pictures/pateye.jpg">My cat Patrick's eye</span>
+      <span class="cap24 caption">
+      <img class="lg lg24" src="/pictures/patwallet.jpg">Painted Wallet, featuring Dr. Patrick Fibonacci Waffles</span>
 
-      <span class=" cap24 caption">
-      <img class="lg24" src="/pictures/patwallet.jpg">Painted Wallet, featuring Dr. Patrick Fibonacci Waffles</span>
+      <span class="cap30 caption">
+      <img class="lg lg30" src="/pictures/CTWColette.jpg">Beaded Choker for my friend's band "Choke the Word"</span>
 
-      <span class=" cap25 caption">
-      <img class="lg25" src="/pictures/caffeine-use.jpg">Early prototype for wire-wrapped molecules, Caffeine</span>
+      <span class="cap31 caption">
+      <img class="lg lg31" src="/pictures/CTWPharlain.jpg">Beaded Choker for my friend's band "Choke the Word"</span>
 
-      <span class=" cap26 caption">
-      <img class="lg26" src="/pictures/Carbon.jpg">Wire wrapped molecule: Carbon</span>
+      <span class="cap33 caption">
+      <img class="lg lg33" src="/pictures/EtOHgood.jpg">Earrings of Alcohol, inspired by Champaigne</span>
 
-      <span class=" cap27 caption">
-      <img class="lg27" src="/pictures/carbonandwater.jpg">Wire wrapped Carbon and Water</span>
+      <span class="cap25 caption">
+      <img class="lg lg25" src="/pictures/caffeine-use.jpg">Early prototype for wire-wrapped molecules, Caffeine</span>
 
-      <span class=" cap28 caption">
-      <img class="lg28" src="/pictures/chessset3.jpg">Origami Chess Set</span>
+      <span class="cap20 caption">
+      <img class="lg lg20" src="/pictures/dna2.jpg">Wire wrapped necklace, DNA with Hydrogen bonds</span>
 
-      <span class=" cap29 caption">
-      <img class="lg29" src="/pictures/chessset2.jpg">Origami Chess Set</span>
+      <span class=" cap10 caption">
+      <img class="lg lg10" src="/pictures/atoc.jpg">Adenine to Thymine friendship necklaces</span>
 
-      <span class=" cap30 caption">
-      <img class="lg30" src="/pictures/CTWColette.jpg">Beaded Choker for my friend's band "Choke the Word"</span>
+      <span class="cap26 caption">
+      <img class="lg lg26" src="/pictures/Carbon.jpg">Wire wrapped molecule: Carbon</span>
 
-      <span class=" cap31 caption">
-      <img class="lg31" src="/pictures/CTWPharlain.jpg">Beaded Choker for my friend's band "Choke the Word"</span>
+      <span class="cap27 caption">
+      <img class="lg lg27" src="/pictures/carbonandwater.jpg">Wire wrapped Carbon and Water</span>
 
-      <span class=" cap32 caption">
-      <img class="lg32" src="/pictures/DNAnecklace.jpg">Prototype for DNA necklace, still using Hydrogen Bonds for clasps</span>
+      <span class="cap32 caption">
+      <img class="lg lg32" src="/pictures/DNAnecklace.jpg">Prototype for DNA necklace, still using Hydrogen Bonds for clasps</span>
 
-      <span class=" cap33 caption">
-      <img class="lg33" src="/pictures/EtOHgood.jpg">Earrings of Alcohol, inspired by Champaigne</span>
+      <span class="cap28 caption">
+      <img class="lg lg28" src="/pictures/chessset3.jpg">Origami Chess Set</span>
+
+      <span class="cap29 caption">
+      <img class="lg lg29" src="/pictures/chessset2.jpg">Origami Chess Set</span>
 
 
     </div>
