--- a/css/main.css
+++ b/css/main.css
@@ -289,7 +289,7 @@ li {
   height: auto;
   border: .3em solid #130220;
 }
-.slothstories .caption {
+.slothstories .sub {
   width: 100%;
   padding: 0;
 }
@@ -342,13 +342,92 @@ li {
 }
 
 /*-------------HCWYM-------*/
+#hcwym {
+  width: 100%;
+}
 .page-heading {
   text-align: center;
+  margin-bottom: 0;
 }
+.gimme {
+  width: 70%;
+  margin: 0 20%;
+}
+img.patreon {
+  text-align: left;
+  height: 5em;
+  width: auto;
+  padding: 0;
+  margin: 0 45%;
+}
+span.halp {
+  text-align: center;
+  color: #660000;
+  display: block;
+  font-size: 1.5em;
+  padding: 0;
+  margin: 0 10%;
+}
+
+a {
+  text-decoration: none;
+}
+
 .divide {
   border-bottom: .2em solid #cc9900;
   border-width: 40%;
-  margin: 3em 40%;
+  margin: 0 40%;
+}
+
+.headline{
+  text-align: center;
+  padding-top: 0;
+}
+.next {
+  right: 1em;
+  margin: 1em;
+  height: 5em;
+  margin-top: 30%;
+  position: absolute;
+  font-size: 1.7em;
+}
+.prev {
+  left: 1em;
+  margin: 1em;
+  height: 5em;
+  margin-top: 30%;
+  position: absolute;
+  font-size: 1.7em;
+}
+
+.container {
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  height: auto;
+  position: relative;
+
+}
+.container div{
+  display: inline-block;
+  display: none;
+}
+.daily {
+  width: 100%;
+  height: auto;
+}
+.showpiece {
+  text-align: center;
+  margin: 1em 20% 2em 20%;
+  width: 40%;
+  height: auto;
+  border: .5em solid black;
+}
+.hcwymsub {
+  text-align: center;
+  width: 30%;
+  margin: .2em 30%;
+  font-size: 2em;
 }
 
 /*-------------Gallery-------*/
@@ -356,93 +435,67 @@ li {
 .gallery h1 {
   text-align: center;
 }
-
-
-.large {
-  display: none;
+.gallery {
+  width: 95%;
 }
 #thumbnails {
+  text-align: center;
   width: 100%;
-  margin: 1em 10%;
+  margin: 1em 1%;
 }
-.sm1, .sm2, .sm3, .sm4,
-.sm5, .sm6, .sm7, .sm8,
-.sm9, .sm10, .sm11, .sm12,
-.sm13, .sm14, .sm15, .sm16,
-.sm17, .sm18, .sm19, .sm20,
-.sm21, .sm22, .sm23, .sm24,
-.sm25, .sm26, .sm27, .sm28,
-.sm29, .sm30, .sm31, .sm32,
-.sm33, .sm34, .sm35, .sm36 {
+
+.sm {
   height: 12.5em;
   width: auto;
 }
-.lg1, .lg2, .lg3, .lg4,
-.lg5, .lg6, .lg7, .lg8,
-.lg9, .lg10, .lg11, .lg12,
-.lg13, .lg14, .lg15, .lg16,
-.lg17, .lg18, .lg19, .lg20,
-.lg21, .lg22, .lg23, .lg24,
-.lg25, .lg26, .lg27, .lg28,
-.lg29, .lg30, .lg31, .lg32,
-.lg33, .lg34, .lg35, .lg36 {
-  width: 60%;
+
+.lg {
+  width: 70%;
   height: auto;
-  margin: 1em 20% 1em 20%;
+  margin: 1em 10%;
   border: .5em solid #ffffcc;
   z-index: 0;
   display: none;
-
 }
 .gallery span {
   align: center;
   margin: 0 5%;
   background: #ffffcc;
-  height: auto;
   position: absolute;
-  top: 30%;
+  position: fixed;
+  top: 10%;
 
 }
-.cap1, .cap2, .cap3, .cap4,
-.cap5, .cap6, .cap7, .cap8,
-.cap9, .cap10, .cap11, .cap12,
-.cap13, .cap14, .cap15, .cap16,
-.cap17, .cap18, .cap19, .cap20,
-.cap21, .cap22, .cap23, .cap24,
-.cap25, .cap26, .cap27, .cap28,
-.cap29, .cap30, .cap31, .cap32,
-.cap33, .cap34, .cap35, .cap36 {
+.caption {
   text-align: center;
   color: black;
   position: absolute;
   font-size: 2.3em;
   z-index: 1;
   display: none;
+
 }
 .close {
   height: 3em;
-  bottom: 62%;
-  left:84%;
+  top: 12%;
+  right: 10%;
   position: absolute;
+  position: fixed;
   z-index: 4;
   display: none;
 }
 
-#enlarge {
-}
-
 .hexagon, .hexagon div {
-  margin: 0 3%;
+  margin: 0 2%;
   transform-origin: 50% 50%;
   display: inline-block;
   overflow: hidden;
-
-
 }
 .hexagon {
   width: 10.5em;
   height: 13em;
   transform: rotate(120deg);
+
 }
 .hexagon div{
   width: 100%;
@@ -451,6 +504,7 @@ li {
 }
 .hex1 {
   transform: rotate(-60deg);
+
 }
 .hex2 {
   transform:rotate(-60deg);
