--- a/css/main.css
+++ b/css/main.css
@@ -350,15 +350,15 @@ li {
   margin-bottom: 0;
 }
 .gimme {
-  width: 70%;
-  margin: 0 20%;
+  width: 100%;
+
 }
 img.patreon {
   text-align: left;
   height: 5em;
   width: auto;
   padding: 0;
-  margin: 0 45%;
+  margin: 0 47%;
 }
 span.halp {
   text-align: center;
@@ -366,7 +366,7 @@ span.halp {
   display: block;
   font-size: 1.5em;
   padding: 0;
-  margin: 0 10%;
+  margin: 0 27%;
 }
 
 a {
@@ -383,21 +383,23 @@ a {
   text-align: center;
   padding-top: 0;
 }
-.next {
+.next img{
   right: 1em;
   margin: 1em;
   height: 5em;
   margin-top: 30%;
   position: absolute;
   font-size: 1.7em;
+  z-index: 50;
 }
-.prev {
+.prev img{
   left: 1em;
   margin: 1em;
   height: 5em;
   margin-top: 30%;
   position: absolute;
   font-size: 1.7em;
+  z-index: 50;
 }
 
 .container {
@@ -406,11 +408,13 @@ a {
   width: 100%;
   height: auto;
   position: relative;
-
 }
+
 .container div{
-  display: inline-block;
-  display: none;
+  display: inline;
+}
+.container img {
+
 }
 .daily {
   width: 100%;
