--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -49,7 +49,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm sm8" src="/pictures/Mousebee_1.jpg">
+            <img class="sm sm8" src="/pictures/MouseBee_1.jpg">
           </div>
         </div>
       </div>
@@ -57,7 +57,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm sm9" src="/pictures/Mousebee_3.jpg">
+            <img class="sm sm9" src="/pictures/MouseBee_3.jpg">
           </div>
         </div>
       </div>
