--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -303,11 +303,11 @@
       <img class="lg lg7" src="/pictures/petra.jpg">Petra, As All her Kind, is Drawn to Red Flowers Especially</span>
 
       <span class="cap8 caption">
-      <img class="lg lg8" src="/pictures/Mousebee_1.jpg">Introducing: Julianne! The Specialist
+      <img class="lg lg8" src="/pictures/MouseBee_1.jpg">Introducing: Julianne! The Specialist
       </span>
 
       <span class="cap9 caption">
-      <img class="lg lg9" src="/pictures/Mousebee_3.jpg">Julianne in her Element</span>
+      <img class="lg lg9" src="/pictures/MouseBee_3.jpg">Julianne in her Element</span>
 
       <span class="cap11 caption">
       <img class="lg lg11" src="/pictures/aoab.jpg">Anatomy of a Beekeeper in Circular Galifreyan</span>
