--- a/css/main.css
+++ b/css/main.css
@@ -406,12 +406,13 @@ a {
   position: absolute;
   text-align: center;
   width: 100%;
-  height: 75em;
+  height: 65em;
   overflow: hidden;
   position: relative;
 }
 
 .container div{
+  padding-bottom: 20%;
   display: inline-block;
 
 }
@@ -435,7 +436,31 @@ a {
   margin: .2em 30%;
   font-size: 2em;
 }
-
+@media only screen and (max-width: 590px) {
+  .next img{
+    right: 1em;
+    margin: 1em;
+    height: 10%;
+    margin-top: 40%;
+    position: absolute;
+    font-size: 1.5em;
+    z-index: 50;
+  }
+  .prev img{
+    left: 1em;
+    margin: 1em;
+    height: 10%;
+    margin-top: 40%;
+    position: absolute;
+    font-size: 1.5em;
+    z-index: 50;
+  }
+  .hcwymsub {
+  text-align: center;
+  width: 30%;
+  margin: .2em 10%;
+  font-size: 2em;
+}
 /*-------------Gallery-------*/
 
 .gallery h1 {
