--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
     <nav>
       <a href="/index.html"><img class="internal" src="/assets/stamphome.png"></a>
       <a href="/about/"><img class="internal" src="/assets/stampabout.png"></a>
-      <a href="/gallery/index.html"><img class="internal" src="/assets/stampgallery.png"></a>
+      <a href="/gallery/"><img class="internal" src="/assets/stampgallery.png"></a>
       <a href="/slothstories/"><img class="internal" src="/assets/stampss.png"></a>
 
       <a href="https://www.instagram.com/coletteisabella/"><img class="links" src="/assets/stampstigram.png"></a>
