--- a/_includes/home.html
+++ b/_includes/home.html
@@ -9,6 +9,7 @@
 
     <a href="/hcwym/"><img class="comb" src="assets/HCWYM.png"></a>
   </div>
+  <a href="/friends/">secrets</a>
   <!--<a href="/bee_game/index.html">Bee Game</a>-->
 
 </body>
