--- a/css/main.css
+++ b/css/main.css
@@ -621,7 +621,7 @@ img.display{
   text-align: center;
   margin: 0 15%;
   width: 70%;
-  border: 1em #1b222d solid;
+  border: 1em #f6f9e8 solid;
 
 }
 .secretsub {
