--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,12 +8,23 @@
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" type="text/css" href="/css/main.css" media="screen">
 
-
+  <!--<link href="store.rb">-->
   <link href='https://fonts.googleapis.com/css?family=IM+Fell+DW+Pica:400,400italic' rel='stylesheet' type='text/css'>
+
+  <!--<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+  <script type="text/javascript" src="/scripts/stripe.js"></script>-->
+
 
   <script src="/scripts/jquery-3.0.0.min.js"></script>
   <script src="/scripts/main.js"></script>
+
+  <!--<script src="/jquery.payment/lib/jquery.payment.js"></script>-->
+
   <!--<script src="/scripts/bee.js"></script>-->
+
+  <!--<script type="text/javascript">
+  Stripe.setPublishableKey('pk_test_PR31DCusAQcjqWav6HXumHm5');
+</script>-->
 
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
