--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
   <!--<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
   <script type="text/javascript" src="/scripts/stripe.js"></script>-->
 
-
+<script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="/scripts/jquery-3.0.0.min.js"></script>
   <script src="/scripts/main.js"></script>
 
