--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,4 +1,5 @@
 <body>
+
   <div id="row1">
     <a href="/about/"><img class="comb" src="assets/beewhois.png"></a>
     <a href="/gallery/index.html"><img class="comb" src="assets/gallery.png"></a>
@@ -6,10 +7,10 @@
   </div>
   <div id="row2">
     <a href="https://www.etsy.com/shop/coletteisabella?ref=hdr_shop_menu"><img class="comb" src="assets/come.png"></a>
-
     <a href="/hcwym/"><img class="comb" src="assets/HCWYM.png"></a>
   </div>
-  <!--<a href="/friends/">secrets</a>
+  <!--<a href="/friends/">Secrets</a>
+  <a href="/patreon/">Patreon</a>
   <a href="/bee_game/index.html">Bee Game</a>-->
 
 </body>
