--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,8 +17,11 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="/scripts/jquery-3.0.0.min.js"></script>
   <script src="/scripts/main.js"></script>
+  <script src="/scripts/stripe.js"></script>
 
-  <!--<script src="/jquery.payment/lib/jquery.payment.js"></script>-->
+  <script src="https://js.stripe.com/v3/"></script>
+  <!--<script src="/jquery.payment/lib/jquery.payment.js"></script>
+  -->
 
   <!--<script src="/scripts/bee.js"></script>-->
 
