--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <img class="banner" src= "/assets/beebanner1.png">
+    <a href="/index.html"><img class="banner" src= "/assets/banner.png"></a>
 
     <nav>
       <a href="/index.html"><img class="internal" src="/assets/stamphome.png"></a>
